--- a/css/toc.css
+++ b/css/toc.css
@@ -14,12 +14,17 @@
 }
 #toc #toctitle, .toc #toctitle, #toc .toctitle, .toc .toctitle {
     text-align: center;
+    margin:0 8px 4px 14px;
+    padding-top:8px;
+    line-height: 1.5;
+    overflow:hidden;
 }
+
+
 #toc ul, .toc ul {
     list-style-image: none;
     list-style-type: none;
-    margin-left: 0;
-    margin-bottom: 0;
+    margin:0 8px 7px 14px;
     padding-left: 0;
     text-align: left;
 }
